# PreserveLife

./: README.md  app.py  pyproject.toml  requirements.txt
instance/: database.sqlite3
static/: index.html  index2.html
static/css/: login_register.css  style-switcher.css  style.css
static/js/: style-switcher.js
templates/: index.html  login.html  login_register.html
