[tool.poetry]
name = "repl_nix_PreserveLife"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
Flask-Login = "^0.6.2"
WTForms = "^3.0.1"
geopy = "^2.3.0"
Flask-SQLAlchemy = "^3.0.3"
pandas = "^1.5.3"
requests = "^2.28.2"
Flask-Bootstrap = "^3.3.7"
Flask-WTF = "^1.1.1"
Werkzeug = "^2.2.3"
Flask-Session = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
